added get list department api
